plugins {
    id 'java'
}

group 'org.example'
version '1.0.0'

repositories {
    mavenLocal()
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'commons-logging:commons-logging:1.2'
    implementation 'org.json:json:20220320'
    implementation 'it.unimi.dsi:fastutil:8.5.8'
    implementation 'org.jetbrains:annotations:23.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    implementation 'org.xbib.elasticsearch:joptsimple:6.3.2.1'
    implementation 'com.esotericsoftware:kryo:5.3.0'
    implementation 'commons-codec:commons-codec:1.15'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
